<resources>
    <string name="app_name">Graduation project</string>
    <string name="sign_in_header">Sign in</string>
    <string name="sign_in_have_not_had_account">Have you had an account?</string>
    <string name="sign_in_sign_up">Sign up</string>
    <string name="sign_in_registration_data_hint">Login, phone, e-mail</string>
    <string name="sign_in_password_hint">Password</string>
    <string name="sign_in_action">Sign in</string>
    <string name="sign_in_forgot_password">Forgot password</string>
    <string name="home_hello_title">Hello </string>
    <string name="home_current_challenges_title">Current challenges</string>
    <string name="home_show_all_action">All</string>
    <string name="home_challenge_title">Challenge</string>
    <string name="home_group_title">Group:</string>
    <string name="home_progress_title">Progress:</string>
    <string name="home_daily_achievement_title">Daily achievement</string>
    <string name="home_participate_action">Participate</string>
    <string name="home_weekly_challenge_title">Weekly challenge</string>
    <string name="home_main_screen_header">Main</string>
    <string name="home_my_groups_header">My groups</string>
    <string name="home_competitions_header">Competitions</string>
    <string name="home_friends_header">Friends</string>
    <string name="home_account_header">Account</string>
    <string name="sign_in_or_text">- or -</string>
    <string name="sign_in_with_google_action">Sign in with Google</string>
    <string name="sign_up_sign_up_header">Sign up</string>
    <string name="sign_up_had_account">Have you had an account?</string>
    <string name="sign_up_enter_registration_data_hint">Enter phone or e-mail</string>
    <string name="sign_up_create_username_hint">Create username</string>
    <string name="sign_up_create_password_hint">Create password</string>
    <string name="sign_up_confirm_the_password_hint">Confirm the password</string>
    <string name="sign_in_invalid_username_or_password">Invalid login or password</string>
    <string name="sign_up_sign_up_action">Sign up</string>
    <string name="create_username_dialog_username_hint">Username</string>
    <string name="create_username_dialog_confirm_action">Confirm</string>
    <string name="create_username_dialog_invalid_username">This username already exists</string>
    <string name="sign_up_password_requirements">The password must be at least 8 characters, including numbers and upper and lower case letters</string>
    <string name="sign_up_invalid_password">Password does not match</string>
    <string name="sign_up_invalid_user_identity">Invalid user data format</string>
    <string name="sign_up_exist_user_identity">This user identity already exists</string>
    <string name="sign_up_empty_field">Fill the field</string>
    <string name="group_screen_header">My groups</string>
    <string name="group_screen_create_group_action">Create new group</string>
    <string name="group_screen_search_hint">Search in groups</string>
    <string name="group_screen_participants">Participants:</string>
    <string name="group_screen_group_name">Group name</string>
    <string name="group_screen_edit_text_enter_text">Enter text</string>
    <string name="group_screen_group_avatar">Group avatar</string>
    <string name="group_screen_file_name">File name</string>
    <string name="group_screen_upload_action">Upload</string>
    <string name="group_screen_participants_title">Participants</string>
    <string name="group_screen_add_friends_to_group">Add friends</string>
    <string name="all_challenges_my_challenges">My challenges</string>
    <string name="group_info_create_challenge_action">Create challenge</string>
    <string name="group_info_switch_challenge">Challenges</string>
    <string name="group_info_switch_participants">Participants</string>
    <string name="group_info_challenge_history">Challenge history</string>
    <string name="group_info_leave_action">Leave the group</string>
    <string name="participants_card_scores">scores</string>
    <string name="group_participants_screen_add_friends">Add friends</string>
    <string name="challenge_details_screen_challenge_title">Challenge «%1$s»</string>
    <string name="challenge_details_screen_achievements_title">Achievements</string>
    <string name="challenge_details_card_creator">Creator:</string>
    <string name="challenge_details_card_start_date">Start:</string>
    <string name="challenge_details_card_finish_date">Finish:</string>
    <string name="add_friends_screen_header">Friends</string>
    <string name="add_friends_screen_back">Back</string>
    <string name="add_friends_screen_confirm_action">Confirm</string>
    <string name="friend_card_delete_friend">Delete</string>
    <string name="notification_screen_header">Notifications</string>
    <string name="notification_screen_notification_title">You have been added to the group</string>
    <string name="notification_screen_description">User «%1$s» added you to the «%2$s» group!</string>
    <string name="notification_screen_to_group_action">Go to group</string>
    <string name="notification_screen_leave_action">Leave the group</string>
    <string name="create_challenge_screen_header">Create a challenge</string>
    <string name="create_challenge_screen_challenge_name">Challenge name</string>
    <string name="create_challenge_screen_start_date">Start date</string>
    <string name="create_challenge_screen_finish_date">Finish date</string>
    <string name="create_challenge_screen_description">Description</string>
    <string name="create_challenge_screen_enter_text_hint">Enter text</string>
    <string name="create_challenge_screen_date_format_hint">DD/MM/YYYY</string>
    <string name="create_challenge_screen_set_exact_time">+ Set exact time</string>
    <string name="create_challenge_screen_participants">Participants</string>
    <string name="create_challenge_screen_add_participants">Add participants</string>
    <string name="create_challenge_screen_achievement">Achievement №%1$s </string>
    <string name="create_challenge_screen_achievement_name_hint">Name </string>
    <string name="create_challenge_screen_add_achievement">+ Add one more achievement</string>
    <string name="create_challenge_screen_save">Save</string>
    <string name="create_challenge_delete_participant">Delete</string>
    <string name="create_challenge_date_format">%1$02d/%2$02d/%3$04d</string>
    <string name="achievement_details_title">Achievement «%1$s»</string>
    <string name="achievement_details_completed">Completed</string>
    <string name="achievement_details_uncompleted">Uncompleted</string>
    <string name="achievement_details_show_details">Details</string>
    <string name="achievement_details_complete_achievement">Complete</string>
    <string name="achievement_details_hint_photo">You need to upload a photo to confirm completion</string>
    <string name="dialog_add_photo_choose_the_way">Choose the way</string>
    <string name="dialog_add_photo_choose_open_camera">Open camera</string>
    <string name="dialog_add_photo_choose_from_gallery">Choose from gallery</string>
    <string name="dialog_camera_permission_title">"Outdo" requests access to camera</string>
    <string name="dialog_camera_permission_message">For the app to work properly, grant Outdo permission to use the camera</string>
    <string name="dialog_gallery_permission_title">"Outdo" requests access to gallery</string>
    <string name="dialog_gallery_permission_message">For the app to work properly, grant Outdo permission to use the gallery</string>
    <string name="photo_preview_close_action">Close</string>
    <string name="error_card_header">Error</string>
    <string name="error_card_went_wrong">Something went wrong, please try again later</string>
    <string name="error_card_update">Update</string>
    <string name="create_challenge_enter_date">Enter date</string>
    <string name="error_loading_photo_header">Error loading</string>
    <string name="error_loading_photo_description">Failed to load image, please try again later</string>
</resources>