<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signUpViewContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <TextView
        android:id="@+id/signUpHeader"
        style="@style/sign_in_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/sign_in_sign_up" />

    <LinearLayout
        android:id="@+id/signInContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/haveNotAccountView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_had_account" />

        <TextView
            android:id="@+id/signInView"
            style="@style/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/sign_in_action" />
    </LinearLayout>

    <EditText
        android:id="@+id/signUpContent"
        style="@style/hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/sign_up_enter_registration_data_hint"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textAppearance="@style/edit_text" />

    <EditText
        android:id="@+id/userNameContent"
        style="@style/hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/sign_up_create_username_hint"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textAppearance="@style/edit_text" />

    <EditText
        android:id="@+id/createPasswordContent"
        style="@style/hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/sign_up_create_password_hint"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textAppearance="@style/edit_text" />

    <EditText
        android:id="@+id/confirmPasswordContent"
        style="@style/hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/sign_up_confirm_the_password_hint"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textAppearance="@style/edit_text" />

    <Button
        android:id="@+id/signUpAction"
        style="@style/button_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_sign_in_action"
        android:text="@string/sign_up_sign_up_action" />

    <TextView
        android:id="@+id/orView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in_or_text" />

    <LinearLayout
        android:id="@+id/signInWithGoogleContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edit_text"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:stateListAnimator="@anim/nav_default_enter_anim">

        <ImageView
            android:id="@+id/googleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_google" />

        <TextView
            android:id="@+id/signInWithGoogleView"
            style="@style/default_semibold_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/sign_in_with_google_action" />
    </LinearLayout>
</LinearLayout>