<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:background="@drawable/bg_dialog_fragment"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/chooseTheWayUsernameView"
        style="@style/header_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_photo_choose_the_way" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/openCameraAction"
        style="@style/simple_button_action_caps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_simple_action"
        android:text="@string/dialog_add_photo_choose_open_camera" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/chooseFromGalleryAction"
        style="@style/simple_button_action_caps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_simple_action"
        android:text="@string/dialog_add_photo_choose_from_gallery" />

</LinearLayout>